Fixed search icon in the search results page appearing in front of the drop-down navigation menus by removing the icon z-index:100;

--- a/themes/academydeliver/css-compiled/template.css
+++ b/themes/academydeliver/css-compiled/template.css
@@ -1246,7 +1246,6 @@ body.error #error {
       position: absolute;
       top: 1rem;
       right: 0.6rem;
-      z-index: 100;
       cursor: pointer; }
     .simplesearch .search-box input[type=search] {
       outline: none;
