--- a/themes/academydeliver/scss/template/_simplesearch.scss
+++ b/themes/academydeliver/scss/template/_simplesearch.scss
@@ -26,7 +26,6 @@
             position: absolute;
             top: 1rem;
             right: 0.6rem;
-            z-index: 100;
             cursor: pointer;
         }
         input[type=search] {
